packages/errors/test/__snapshots__/CANNOT_FETCH_PROJECT_TOKEN.ansi
[31mCan't find project's secret key.[39m